Update experience dates and contact email; enhance footer and experience section for accuracy and clarity.

--- a/backup-frontend/index.html
+++ b/backup-frontend/index.html
@@ -249,7 +249,7 @@
         
         <div class="experience-item">
           <div class="experience-date">
-            <span>2021 - Present</span>
+            <span>2022 - Oct 2024</span>
           </div>
           <div class="experience-content">
             <h3>Backend Developer & AI Engineer</h3>
