--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Mirshod.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>W-Mirshod</title>
+    <meta property="og:title" content="W-Mirshod Portfolio" />
+    <meta property="og:description" content="Software Engineer Portfolio showcasing skills, projects, and achievements." />
+    <meta property="og:image" content="/Mirshod.png" />
+    <meta property="og:url" content="https://w-mirshod.com" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
