Update index.html for improved SEO and metadata; enhance title and Open Graph tags

--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Mirshod.png" />
+    <link rel="icon" type="image/png" href="/Mirshod.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>W-Mirshod</title>
-    <meta property="og:title" content="W-Mirshod Portfolio" />
-    <meta property="og:description" content="Software Engineer Portfolio showcasing skills, projects, and achievements." />
-    <meta property="og:image" content="/Mirshod.png" />
+    <title>Mirshod Qayimov (W-Mirshod)</title>
+    <meta name="description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
+    <meta property="og:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
+    <meta property="og:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
+    <meta property="og:image" content="https://w-mirshod.com/og-image.png" />
+    <meta property="og:image:alt" content="W Mirshod Qayimov Portfolio Preview Image" />
     <meta property="og:url" content="https://w-mirshod.com" />
+    <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
+    <meta name="twitter:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
+    <meta name="twitter:image" content="https://w-mirshod.com/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
