fix: update Open Graph and Twitter image references for consistency

--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,14 @@
     <meta name="description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
     <meta property="og:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
     <meta property="og:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
-    <meta property="og:image" content="https://w-mirshod.com/og-image.png" />
-    <meta property="og:image:alt" content="W Mirshod Qayimov Portfolio Preview Image" />
+    <meta property="og:image" content="https://w-mirshod.com/Mirshod.png" />
+    <meta property="og:image:alt" content="W Mirshod Logo" />
     <meta property="og:url" content="https://w-mirshod.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
     <meta name="twitter:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
-    <meta name="twitter:image" content="https://w-mirshod.com/og-image.png" />
+    <meta name="twitter:image" content="https://w-mirshod.com/Mirshod.png" />
   </head>
   <body>
     <div id="root"></div>
