feat: optimize frontend performance and enhance user experience
- Updated index.html to use optimized images and added performance enhancements such as preloading critical resources and setting theme colors.
- Enhanced nginx configuration to enable gzip compression, aggressive caching for static assets, and added security headers.
- Improved Vite configuration for better bundle optimization, including manual chunk splitting and enabling tree shaking.
- Refactored App component to lazy load non-critical sections, improving initial load time and user experience.
- Updated Certificate and Contact components to utilize optimized images and load external scripts only when necessary.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,20 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Mirshod.png" />
+    <!-- Use optimized profile image -->
+    <link rel="icon" type="image/png" href="/Mirshod-optimized.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mirshod Qayimov (W-Mirshod)</title>
     <meta name="description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
     <meta property="og:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
     <meta property="og:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
-    <meta property="og:image" content="https://w-mirshod.com/Mirshod.png" />
+    <meta property="og:image" content="https://w-mirshod.com/Mirshod-optimized.png" />
     <meta property="og:image:alt" content="W Mirshod Logo" />
     <meta property="og:url" content="https://w-mirshod.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
     <meta name="twitter:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
-    <meta name="twitter:image" content="https://w-mirshod.com/Mirshod.png" />
+    <meta name="twitter:image" content="https://w-mirshod.com/Mirshod-optimized.png" />
+
+    <!-- Performance optimizations -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
+
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/Mirshod-optimized.webp" as="image" type="image/webp" />
+
+    <!-- Theme color -->
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="msapplication-TileColor" content="#0f172a" />
   </head>
   <body>
     <div id="root"></div>
