feat: update portfolio content to reflect senior software engineering expertise
- Revised index.html meta tags to highlight senior software engineering skills and achievements in Python/Django, AI/ML integration, and cloud infrastructure.
- Enhanced About component text to emphasize experience in building production-grade systems, microservices architecture, and performance engineering.
- Updated experience.json descriptions to detail specific projects and technologies used, showcasing leadership in IoT and high-traffic platforms.
- Added new translations in Russian and Uzbek for updated content in the About section, ensuring accessibility for a broader audience.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,16 +6,16 @@
     <link rel="icon" type="image/png" href="/Mirshod-optimized.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mirshod Qayimov (W-Mirshod)</title>
-    <meta name="description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
-    <meta property="og:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
-    <meta property="og:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
+    <meta name="description" content="Mirshod Qayimov (W-Mirshod) – Senior Software Engineer specializing in Python/Django microservices, AI/ML integration, and cloud infrastructure. 20+ production systems, 99.7% uptime, IoT platforms & real-time applications." />
+    <meta property="og:title" content="Mirshod Qayimov (W-Mirshod) – Senior Software Engineer, Python/Django Expert" />
+    <meta property="og:description" content="Mirshod Qayimov (W-Mirshod) – Senior Software Engineer specializing in Python/Django microservices, AI/ML integration, and cloud infrastructure. 20+ production systems, 99.7% uptime, IoT platforms & real-time applications." />
     <meta property="og:image" content="https://w-mirshod.com/Mirshod-optimized.png" />
     <meta property="og:image:alt" content="W Mirshod Logo" />
     <meta property="og:url" content="https://w-mirshod.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mirshod Qayimov (W-Mirshod) – Software Engineer, Full Stack Developer" />
-    <meta name="twitter:description" content="Mirshod Qayimov's portfolio – Software Engineer & Full Stack Developer. Explore projects, skills, and achievements in web, backend, and cloud development." />
+    <meta name="twitter:title" content="Mirshod Qayimov (W-Mirshod) – Senior Software Engineer, Python/Django Expert" />
+    <meta name="twitter:description" content="Mirshod Qayimov (W-Mirshod) – Senior Software Engineer specializing in Python/Django microservices, AI/ML integration, and cloud infrastructure. 20+ production systems, 99.7% uptime, IoT platforms & real-time applications." />
     <meta name="twitter:image" content="https://w-mirshod.com/Mirshod-optimized.png" />
 
     <!-- Performance optimizations -->
