refactor: update styles and functionality for modern design and theme management
- Enhanced typography and color system across the application for a modern 2025 aesthetic.
- Updated Tailwind CSS configuration to include a new color palette and improved font settings.
- Refactored CSS variables for better theme management, including dark and light modes.
- Implemented theme toggle functionality in the Header component, allowing users to switch between dark and light themes.
- Improved overall layout and responsiveness of components, ensuring a cohesive user experience across devices.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,9 +27,9 @@
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" />
     
-    <!-- Preload critical fonts with font-display swap -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" /></noscript>
+    <!-- Preload modern Inter variable font with font-display swap -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" /></noscript>
 
     <!-- Preload critical resources -->
     <link rel="preload" href="/Mirshod-optimized.webp" as="image" type="image/webp" />
