refactor: update branding in index.html and Header component
- Changed the alt text for the logo in index.html from "W Mirshod Logo" to "Mirshod Logo" for improved clarity.
- Updated the displayed name in the Header component from "W Mirshod" to "Mirshod" to maintain consistency across the application.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Mirshod Qayimov (W-Mirshod) – Senior Software Engineer, Python/Django Expert" />
     <meta property="og:description" content="Mirshod Qayimov (W-Mirshod) – Senior Software Engineer specializing in Python/Django microservices, AI/ML integration, and cloud infrastructure. 20+ production systems, 99.7% uptime, IoT platforms & real-time applications." />
     <meta property="og:image" content="https://w-mirshod.com/Mirshod-optimized.png" />
-    <meta property="og:image:alt" content="W Mirshod Logo" />
+    <meta property="og:image:alt" content="Mirshod Logo" />
     <meta property="og:url" content="https://w-mirshod.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
